[tool.poetry]
name = "cent"
version = "4.2.0"
description = "Python library to communicate with Centrifugo v3 HTTP API"
authors = ["Alexandr Emelin", "Bogdan Evstratenko"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
async = ["httpx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
